# const-eval-rs

./: Cargo.toml  README.md
src/: ir.rs  lib.rs
